App-Route-ingress-controller/ingress-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: ingress-svc
spec:
  selector:
    app: approute
  ports:
  - port: 80
  targetPort: 80
  type: LoadBalancer
