App-Route-ingress-controller/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-approute
  labels: 
    app: approute
spec: 
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: approute.srijansharma.online
    http:
      paths:
      - backend:
          service: 
            name: approute
            port:
              number: 80
        path: "/"
        pathType: Prefix
